@@ -1,3 +1,7 @@
+08/28/2006  Ian Lewis   <IanLewis@member.fsf.org>
+
+    * Changed the messages files to be named the standard ResourceBundle way.
+
 08/27/2006  Ian Lewis   <IanLewis@member.fsf.org>
 
     * Updated the launch4j script to set the absolute path of the lib directory
